--- a/assets/views/singleItem.html
+++ b/assets/views/singleItem.html
@@ -3,24 +3,17 @@
 	<article class="post">
 		<header>
 			<div class="title">
-				<h2><a href="#">Article 1</a></h2>
-				<p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
+				<h2><a href="#">{{ post.title }}</a></h2>
+				<p> {{ post.subtitle }}</p>
 			</div>
 			<div class="meta">
-				<time class="published" datetime="2015-11-01">November 1, 2015</time>
-				<a href="#" class="author"><span class="name">Jane Doe</span><img src="images/avatar.jpg" alt="" /></a>
+				<time class="published" datetime="2015-11-01">{{ post.date }}</time>
+				<a href="#" class="author"><span class="name">{{ post.author }}</span><img src="images/avatar.jpg" alt="" /></a>
 			</div>
 		</header>
 		<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-		<p>Text</p>
+		<p>t</p>
 		<p>More text here</p>
-		<footer>
-			<ul class="stats">
-				<li><a href="#">General</a></li>
-				<li><a href="#" class="icon fa-heart">28</a></li>
-				<li><a href="#" class="icon fa-comment">128</a></li>
-			</ul>
-		</footer>
 	</article>
 
 </div>
