Working on directives

--- a/assets/views/singleItem.html
+++ b/assets/views/singleItem.html
@@ -1,19 +1,5 @@
 <div id="main">
-	<!-- Post -->
-	<article class="post">
-		<header>
-			<div class="title">
-				<h2><a href="#">{{ post.title }}</a></h2>
-				<p> {{ post.subtitle }}</p>
-			</div>
-			<div class="meta">
-				<time class="published" datetime="2015-11-01">{{ post.date }}</time>
-				<a href="#" class="author"><span class="name">{{ post.author }}</span><img src="images/avatar.jpg" alt="" /></a>
-			</div>
-		</header>
-		<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-		<p>t</p>
-		<p>More text here</p>
-	</article>
+	
+	<post p="post" index="ID" hideButton="false"></post>
 
 </div>
