--- a/assets/views/home.html
+++ b/assets/views/home.html
@@ -12,38 +12,8 @@
 	</section>
 
 	<!-- Post #/{{$index}}-->
-	<div ng-repeat="p in posts">
-	<article class="post">
-		<header>
-			<div class="title">
-				<h2><a href="#/{{$index}}"> {{ p.title }}</a></h2>
-				<p> {{ p.subtitle }}</p>
-			</div>
-			<div class="meta">
-				<time class="published" datetime="2015-11-01"> {{ p.date }}</time>
-				<a href="#" class="author"><span class="name">{{ p.author }}</span><img src="images/avatar.jpg" alt="" /></a>
-			</div>
-		</header>
-		<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-		<p>Let’s create a webpage in 5 minutes. First, get a text-editor. I’m using Sublime, which you can download at http://www.sublimetext.com/, but others include TextEdit (with plain text) and Atom. Now, we’ll create an index.html file. Notice the extension - it's html because we are writing html. HTML stands for Hyper Text Markup Language and it’s something we can use to code up a quick webpage. With our index.html file open in our text editor, we'll write some boilerplate code. </p>
-
-		<!-- image-->
-
-		<p>This is code we have to write to define this file as an HTML file. Nearly everything in HTML is written with tags (those right and left arrow brackets) - why is this? Well it’s just the way the language is written. For the HTML tag, we have an opening tag and a closing tag, but this is not necessarily true for all tags. Now, we'll write some more code...</p>
-
-		<!-- image-->
-
-		<footer>
-			<ul class="actions">
-				<li><a href="#/0" class="button big">Continue Reading</a></li>
-			</ul>
-			<!-- <ul class="stats"> -->
-			<!-- <li><a href="#">General</a></li>-->
-			<!-- <li><a href="#" class="icon fa-heart">28</a></li>
-			<li><a href="#" class="icon fa-comment">128</a></li> -->
-			<!-- </ul>-->
-		</footer>
-	</article>
+	<div ng-repeat="p in posts|limitTo:1">
+		<post p="p" index="$index" hideButton="true"></post>
 	</div>
 
 							<!-- Sidebar -->
@@ -100,7 +70,7 @@
 									<h2>About me</h2>
 									<p>Computer science major.<br>Film minor. <br>Vassar College '17. <br>Vanilla Lattes<br>Tap Dancing</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn More</a></li>
+										<li><a href="https://blondiebytes.github.io/" class="button">Learn More</a></li>
 									</ul>
 								</section>
 
