Taking away the button thingy

--- a/assets/views/home.html
+++ b/assets/views/home.html
@@ -13,7 +13,7 @@
 
 	<!-- Post #/{{$index}}-->
 	<div ng-repeat="p in posts|limitTo:1">
-		<post p="p" index="$index" hideButton="true"></post>
+		<post p="p" index="$index"></post>
 	</div>
 
 							<!-- Sidebar -->
