Hide and show working

--- a/assets/views/home.html
+++ b/assets/views/home.html
@@ -14,56 +14,59 @@
 	<!-- Post #/{{$index}}-->
 	<div ng-repeat="p in posts|limitTo:1">
 		<mainpost p="p" i="$index"></mainpost>
+
 	</div>
+	
+	<!-- Notes -->
 
 							<!-- Sidebar -->
-							<section id="sidebar">
+							<!-- <section id="sidebar"> -->
 
 								<!-- Mini Posts -->
 								<section>
-									<div class="mini-posts">
+									<!-- <div class="mini-posts"> -->
 
 										<!-- Mini Post -->
-										<article class="mini-post">
+<!-- 										<article class="mini-post">
 											<header>
 												<h3><a href="#">Vitae sed condimentum</a></h3>
 												<time class="published" datetime="2015-10-20">October 20, 2015</time>
 												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
 											</header>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-										</article>
+										</article> -->
 
 										<!-- Mini Post -->
-										<article class="mini-post">
+<!-- 										<article class="mini-post">
 											<header>
 												<h3><a href="#">Rutrum neque accumsan</a></h3>
 												<time class="published" datetime="2015-10-19">October 19, 2015</time>
 												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
 											</header>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-										</article>
+										</article> -->
 
 										<!-- Mini Post -->
-										<article class="mini-post">
+<!-- 										<article class="mini-post">
 											<header>
 												<h3><a href="#">Odio congue mattis</a></h3>
 												<time class="published" datetime="2015-10-18">October 18, 2015</time>
 												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
 											</header>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-										</article>
+										</article> -->
 
 										<!-- Mini Post -->
-										<article class="mini-post">
+<!-- 										<article class="mini-post">
 											<header>
 												<h3><a href="#">Enim nisl veroeros</a></h3>
 												<time class="published" datetime="2015-10-17">October 17, 2015</time>
 												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
 											</header>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-										</article>
+										</article> -->
 
-									</div>
+									<!-- </div> -->
 								</section>
 								<!-- About -->
 								<section class="blurb">
