--- a/public/views/home.html
+++ b/public/views/home.html
@@ -77,4 +77,14 @@
 									</ul>
 								</section>
 
-								
+								<!-- Footer -->
+							<section id="footer">
+							<ul class="icons">
+ 										<li><a href="https://www.instagram.com/blondiebytes/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+ 										<li><a href="https://twitter.com/blondiebytes" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+											<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+ 											<li><a href="http://bit.ly/1NbxNzV" class="icon fa-youtube"><span class="label">YouTube</span></a></li>
+ 											<li><a href="https://www.linkedin.com/in/blondiebytes" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+ 										<li><a href="https://github.com/blondiebytes" class="icon fa-github"><span class="label">GitHub</span></a></li> <li><a href="https://www.pinterest.com/blondiebytes" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li></ul>
+								<p class="copyright">&copy; Kathryn Hodge 2016.</p>
+							</section>
