--- a/public/views/singleItem.html
+++ b/public/views/singleItem.html
@@ -1,3 +1,18 @@
+<!-- Wrapper -->
+			<div id="wrapper">
+				<!-- Header -->
+					<header id="header">
+						<h1><a href="#/">blondiebits</a></h1>
+						<nav class="links">
+							<ul>
+								<li><a href="https://blondiebytes.github.io/">About Me</a></li>
+								<li><a href="http://bit.ly/1NbxNzV">YouTube</a></li>
+								<li><a href="#/">All Posts</a></li>
+								<li><a href="#/#blurb">Contact</a></li>
+							</ul>
+						</nav>
+					</header>
+
 <div id="main">
 	
 	<singlepost p="post" i="ID"></singlepost>
@@ -14,4 +29,5 @@
 								<p class="copyright">&copy; Kathryn Hodge 2016.</p>
 							</section>
 
+</div>
 </div>
