--- a/public/views/home.html
+++ b/public/views/home.html
@@ -73,20 +73,20 @@
 									<!-- </div> -->
 								</section>
 								<!-- About -->
-								<section class="blurb">
+<!-- 								<section class="blurb">
 									<h2>About me</h2>
 									<p>Computer science major.<br>Film minor. <br>Vassar College '17. <br>Vanilla Lattes<br>Tap Dancing</p>
 									<ul class="actions">
 										<li><a href="https://blondiebytes.github.io/" class="button">Learn More</a></li>
 									</ul>
-								</section>
+								</section> -->
 
 								<!-- Footer -->
 							<section id="footer">
 							<ul class="icons">
  										<li><a href="https://www.instagram.com/blondiebytes/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
  										<li><a href="https://twitter.com/blondiebytes" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+											<li><a href="mailto:blondiebytes@gmail.com?subject=Hello blondiebits!" class="icon fa-envelope"><span class="label">Email</span></a></li>
  											<li><a href="http://bit.ly/1NbxNzV" class="icon fa-youtube"><span class="label">YouTube</span></a></li>
  											<li><a href="https://www.linkedin.com/in/blondiebytes" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
  										<li><a href="https://github.com/blondiebytes" class="icon fa-github"><span class="label">GitHub</span></a></li> <li><a href="https://www.pinterest.com/blondiebytes" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li></ul>
