--- a/public/views/author.html
+++ b/public/views/author.html
@@ -13,7 +13,7 @@
 			</div>
 		</header>
 
-		<div ng-include="post.author_bio"></div> -->
+		<div ng-include="post.author_bio"></div>
 
 		</article>
 
