--- a/public/views/author.html
+++ b/public/views/author.html
@@ -9,7 +9,7 @@
 				<p>{{ post.author_description }} </p>
 			</div>
 			<div class="meta">
-				<a href="#/author/{{ postIndex }}" class="author"><img ng-src="{{ post.author_image }}" alt="" /></a>
+				<a href="#/author/{{ postIndex }}" class="author"><span class="name">{{ post.author }}</span><img ng-src="{{ post.author_image }}" alt="" /></a>
 			</div>
 		</header>
 
